foundations/flex/02-flex-header/style.css
.header  {
  font-family: monospace;
  background: papayawhip;

  display: flex;
  align-items: center;
  padding: 15px;
}

.logo {
  font-size: 48px;
  font-weight: 900;
  color: tomato;
  background: white;
  padding: 4px 32px;

  margin-left: auto;
  margin-right: auto;
}

ul {
  /* this removes the dots on the list items*/
  list-style-type: none;
  margin: 0;
  padding: 0;

  display: flex;
  row-gap: 10px;
}

a {
  font-size: 22px;
  background: white;
  padding: 8px;
  /* this removes the line under the links */
  text-decoration: none;
}

